app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextjs-app
  namespace: chrgue
  labels:
    app: nextjs-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nextjs-app
  template:
    metadata:
      labels:
        app: nextjs-app
    spec:
      containers:
        - name: nextjs-app
          image: chrgue/nextjs-prototype
          ports:
            - containerPort: 3000
---

apiVersion: v1
kind: Service
metadata:
  name: nextjs-service
  namespace: chrgue
spec:
  selector:
    app: nextjs-app
  ports:
    - protocol: TCP
      port: 3333
      targetPort: 3000
