ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chrgue-ingress
  namespace: chrgue
spec:
  rules:
    - host: k8s.chrgue.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nextjs-service
                port:
                  number: 3333
